make each project item the size of the grid cell. update padding to ensure there's no overflowing downwards

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ main {
     display: grid;
     grid-template-columns: 4.5fr 1fr;
     grid-template-rows: repeat(2, 1fr);
-    padding: 50px 50px 0 50px;
+    padding: 50px;
     gap: 20px;
 }
 
@@ -267,5 +267,4 @@ main {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 20px;
-    justify-items: stretch;
 }
